--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "alcaeus/mongo-php-adapter": "^1.1",
+        "doctrine/mongodb-odm": "^1.2",
+        "doctrine/mongodb-odm-bundle": "^3.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -60,5 +63,12 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": null
+    },
+    "config": {
+        "platform": {
+            "ext-mongo": "1.6.16",
+            "ext-mongodb": "1.2.0",
+            "php": "7.2.0"
+        }
     }
 }
