--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,6 +2,7 @@ FROM php:7.2.0-fpm
 
 COPY config/php.ini /usr/local/etc/php/
 
+
 # see https://github.com/docker-library/php/issues/307
 RUN curl -sS -o /tmp/icu.tar.gz -L http://download.icu-project.org/files/icu4c/59.1/icu4c-59_1-src.tgz && \
     tar -zxf /tmp/icu.tar.gz -C /tmp && \
@@ -14,9 +15,17 @@ RUN docker-php-ext-configure intl --with-icu-dir=/usr/local && \
 
 RUN docker-php-ext-enable opcache.so
 
-RUN apt-get update && \
-    apt-get install -y libpq-dev && \
-    docker-php-ext-install pdo_pgsql
+#RUN apt-get update && \
+#    apt-get install -y libpq-dev && \
+#    docker-php-ext-install pdo_pgsql
+
+#COPY config/mongodb.ini /usr/local/etc/php/conf.d/
+
+
+
+RUN pecl channel-update pecl.php.net && \
+    pecl install mongodb && \
+    docker-php-ext-enable mongodb.so
 
 RUN curl -LsS https://symfony.com/installer -o /usr/local/bin/symfony
 RUN chmod a+x /usr/local/bin/symfony
